[gd_scene load_steps=2 format=3 uid="uid://c5qi8r80r0o5n"]

[ext_resource type="Script" path="res://addons/inspector/drop_options_ui.gd" id="1_en26l"]

[node name="DropOptionsUI" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 2
script = ExtResource("1_en26l")

[node name="GridContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="PropertyGrid" type="GridContainer" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
columns = 2

[node name="ItemSelection" type="Label" parent="GridContainer/PropertyGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "Item:"

[node name="HBoxContainer" type="HBoxContainer" parent="GridContainer/PropertyGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ItemResourceID" type="LineEdit" parent="GridContainer/PropertyGrid/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="GridContainer/PropertyGrid/HBoxContainer"]
layout_mode = 2

[node name="ItemIDValid" type="TextureRect" parent="GridContainer/PropertyGrid/HBoxContainer/CenterContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 16)
layout_mode = 2

[node name="AmountSelection" type="Label" parent="GridContainer/PropertyGrid"]
unique_name_in_owner = true
layout_mode = 2
text = "Amount:
"
